--- a/myproject/src/App.css
+++ b/myproject/src/App.css
@@ -1,3 +1,11 @@
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  height: 100vh;
+  width: 100px;
+}
+
 main {
   min-height: 100vh;
   background-image: linear-gradient(
@@ -59,16 +67,4 @@ main {
 }
 .weather-box .weather {
   color: white;
-}
-
-.footer {
-  text-align: center;
-  width: 100%;
-  background-color: red;
-  position: absolute;
-  bottom: 0;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  color: whitesmoke;
-  
 }
