--- a/myproject/src/App.css
+++ b/myproject/src/App.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -7,6 +6,7 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+}
 
 body {
   margin: 0;
