--- a/myproject/src/App.css
+++ b/myproject/src/App.css
@@ -4,7 +4,6 @@
   box-sizing: border-box;
 }
 
-
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
@@ -39,8 +38,8 @@ main {
   appearance: none;
   border: none;
   outline: none;
-  border-radius: 20px;
-  background-color: rgba(169, 161, 161, 0.8);
+  border-radius: 100px;
+  background-color: rgba(224, 215, 215, 0.8);
   font-size: 18px;
   color: black;
 }
@@ -94,4 +93,5 @@ main {
 }
 h1 {
   text-align: center;
+  padding: 100px;
 }
