--- a/myproject/src/App.css
+++ b/myproject/src/App.css
@@ -104,10 +104,8 @@ main {
 }
 
 .app {
-  /* background-image: url(https://img.freepik.com/free-vector/sky-background-video-conferencing_23-2148625271.jpg?auto=format&h=200); */
   background-size: cover;
   background-image: url(https://cdn.disneyanimation.com/uploads/technology/cloud-readme.jpg);
-  /* background-image: url(https://img.freepik.com/free-vector/stormy-rainy-weather-forecast-3d-realistic-icons-set-with-sun-disc-clouds-with-rainfall_1441-3071.jpg?w=1060&t=st=1669143645~exp=1669144245~hmac=c7ce081808d19279290ceb26af1558cf97d9bb3b0b3242134ddc554ec1f05155); */
 }
 .app.warm {
   background-image: url(https://us.123rf.com/450wm/kraft2727/kraft27271804/kraft2727180400029/kraft2727180400029.jpg?ver=6);
@@ -116,4 +114,5 @@ main {
 h1 {
   text-align: center;
   padding: 100px;
+  text-shadow: 4px 5px 6px rgba(0, 0, 0, 0.6);
 }
