--- a/myproject/src/App.css
+++ b/myproject/src/App.css
@@ -116,3 +116,10 @@ h1 {
   padding: 100px;
   text-shadow: 4px 5px 6px rgba(0, 0, 0, 0.6);
 }
+
+.min-max {
+  font-size: 20px;
+  font-weight: 100;
+  margin-bottom: 50px;
+  color: rgb(84, 84, 84);
+}
