--- a/myproject/src/App.css
+++ b/myproject/src/App.css
@@ -73,7 +73,7 @@ main {
 }
 
 .location-box .date {
-  color: white;
+  color: rgb(232, 208, 208);
   font-size: 2rem;
   text-align: center;
 
@@ -115,4 +115,10 @@ h1 {
   text-align: center;
   padding: 100px;
   text-shadow: 4px 5px 6px rgba(0, 0, 0, 0.6);
+}
+.min-max {
+  font-size: 20px;
+  font-weight: 100;
+  margin-bottom: 50px;
+  color: rgb(84, 84, 84);
 }
